RESOLVED FIXED 204949
[LFC][Integration] Fix DisplayRunPath offsets
https://bugs.webkit.org/show_bug.cgi?id=204949
Summary [LFC][Integration] Fix DisplayRunPath offsets
Antti Koivisto
Reported 2019-12-06 08:57:25 PST
Display::Boxes use local (text box relative) offsets.
Attachments
patch (2.94 KB, patch)
2019-12-06 09:01 PST, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2019-12-06 09:01:55 PST
WebKit Commit Bot
Comment 2 2019-12-06 10:07:24 PST
The commit-queue encountered the following flaky tests while processing attachment 385018 [details]: imported/w3c/web-platform-tests/IndexedDB/fire-error-event-exception.html bug 201481 (author: youennf@gmail.com) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 3 2019-12-06 10:08:10 PST
Comment on attachment 385018 [details] patch Clearing flags on attachment: 385018 Committed r253209: <https://trac.webkit.org/changeset/253209>
WebKit Commit Bot
Comment 4 2019-12-06 10:08:11 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2019-12-06 10:09:18 PST
Note You need to log in before you can comment on or make changes to this bug.